<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.scwang.smart.refresh.header.ClassicsHeader
            app:srlTextPulling="@string/srl_header_pulling"
            app:srlTextLoading="@string/srl_header_loading"
            app:srlTextRelease="@string/srl_header_release"
            app:srlTextFinish="@string/srl_header_finish"
            app:srlTextFailed="@string/srl_header_failed"
            app:srlTextUpdate="@string/srl_header_update"
            app:srlTextSecondary="@string/srl_header_secondary"
            app:srlTextRefreshing="@string/srl_header_refreshing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tooltipText="数据可能有延迟"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/home_chart_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="33sp"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:text="@string/home_chart_title"
                    android:textColor="@color/purple_500"
                    android:textColorHighlight="#575757"
                    android:textColorHint="#8A8A8A"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/home_chart_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:focusable="auto"
                    android:foregroundGravity="center_vertical|center_horizontal|fill"
                    android:overScrollMode="always"
                    android:prompt="@string/home_chart_title_drop_down_text"
                    android:scrollbars="vertical"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center"

                    android:tooltipText="@string/home_chart_title_drop_down_text"
                    tools:layout_editor_absoluteX="2dp" />
            </LinearLayout>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/home_bar_chart"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:minHeight="220dp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent">

            </com.github.mikephil.charting.charts.BarChart>

            <LinearLayout
                android:id="@+id/home_bar_chart_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@string/empty_text"
                    android:src="@drawable/empty"
                    android:textAlignment="center"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/home_chart_empty_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/empty_text"
                    android:textAlignment="center"
                    android:textColor="#636363"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:text="@string/home_pie_chart_title"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/purple_500"
                    android:textColorHighlight="#575757"
                    android:textColorHint="#8A8A8A"
                    android:textSize="16sp" />
                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/home_chart_pie"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm_count"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="1.5"
                    android:background="@color/count_bg"
                    android:orientation="horizontal"
                    android:paddingTop="15dp"
                    android:paddingEnd="0dp"
                    android:paddingBottom="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="fill_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/degree_level_label_1"
                            android:textAlignment="center"
                            android:textColor="@color/degree_lever_1"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/degree_lever_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="sans-serif-medium"
                            android:text="0"
                            android:textAlignment="center"
                            android:textColor="@color/degree_lever_1"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="fill_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/degree_level_label_2"
                            android:textAlignment="center"
                            android:textColor="@color/degree_lever_2"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/degree_lever_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="sans-serif-medium"
                            android:text="0"
                            android:textAlignment="center"
                            android:textColor="@color/degree_lever_2"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="fill_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/degree_level_label_3"
                            android:textAlignment="center"
                            android:textColor="@color/degree_lever_3"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/degree_lever_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="sans-serif-medium"
                            android:text="0"
                            android:textAlignment="center"
                            android:textColor="@color/degree_lever_3"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="fill_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/degree_level_label_4"
                            android:textAlignment="center"
                            android:textColor="@color/degree_lever_4"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/degree_lever_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="sans-serif-medium"
                            android:text="0"
                            android:textAlignment="center"
                            android:textColor="@color/degree_lever_4"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/home_chart_progress"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:visibility="gone"
        app:SpinKit_Color="#009688"
        app:SpinKit_Style="Circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />
</androidx.constraintlayout.widget.ConstraintLayout>