<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="#FFFFFF"
        android:visibility="visible">

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edit_text_login_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:hint="@string/account_hit"
                android:importantForAutofill="no"
                android:inputType="text"
                android:lineSpacingExtra="8sp"
                android:singleLine="false"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:typeface="normal" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tableRow">

            <EditText
                android:id="@+id/edit_text_login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:hint="@string/password_hit"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:lineSpacingExtra="8sp"
                android:singleLine="false"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:imeOptions="actionGo"
                android:typeface="normal"
                android:visibility="visible" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/tableRow2">

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/toast_hint_color"
                android:drawableTint="#EAE4E4"
                android:fontFamily="monospace"
                android:text="@string/login_btn_text"
                android:textColor="#FFFFFF" />
        </TableRow>

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/login_progress"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:SpinKit_Color="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableRow2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>